--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "Shaik Samdan - Data & AI Practitioner Portfolio",
+  "name": "Samdan Shaik - Software Engineer Portfolio",
   "short_name": "Samdan Portfolio",
-  "description": "Portfolio of Shaik Samdan, Data & AI Practitioner specializing in Machine Learning, Deep Learning, and NLP",
+  "description": "Portfolio of Samdan Shaik, Software Engineer specializing in Python automation and Data Analysis.",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#0a0a0f",
